base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
